[ridho] - refactor all content

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -128,8 +128,8 @@
 }
 
 .homei:hover {
-  box-shadow: 0 2px 10px #2ab0ee;
-  background-color: #2ab0ee;
+  box-shadow: 0 2px 10px #4b778d;
+  background-color: #4b778d;
   color: #ffffff !important;
 }
 
