--- a/src/containers/experienceAccordion/ExperienceAccordion.css
+++ b/src/containers/experienceAccordion/ExperienceAccordion.css
@@ -8,7 +8,7 @@
 
 .experience-accord:hover {
   color: rgba(255, 255, 255, 1);
-  box-shadow: 0 5px 15px #e2405f;
+  box-shadow: 0 5px 15px #4b778d;
 }
 
 .accord-panel {
